--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.21.1",
-    "jsdom": "^25.0.1"
+    "jsdom": "^25.0.1",
+    "lowdb": "^7.0.1",
+    "simple-json-db": "^2.0.0"
   }
 }
